--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 }
 
 dependencies {
+    compile 'com.amazonaws:aws-java-sdk-dynamodb:1.11.105'
     compile 'ch.qos.logback:logback-classic:1.2.1'
+    compile ratpack.dependency("guice")
 }
 
